tests/ui/errors/snapshots/parse_error_unknown_directive.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:2:13]
 1 │ 
 2 │ fn test() { @unknown(foo); }
   ·             ────┬───
   ·                 ╰── unknown directive
   ╰────
  help: There is no such directive · code: [parse.syntax_error]
